--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,11 @@
       "dom"
     ],
     "paths": {
-      "ngx-image-cropper": [
-        "dist/ngx-image-cropper"
+      "ngx-image-zoom-cropper": [
+        "dist/ngx-image-zoom-cropper"
       ],
-      "ngx-image-cropper/*": [
-        "dist/ngx-image-cropper/*"
+      "ngx-image-zoom-cropper/*": [
+        "dist/ngx-image-zoom-cropper/*"
       ]
     }
   },
