--- a/projects/ngx-image-zoom-cropper/package.json
+++ b/projects/ngx-image-zoom-cropper/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ngx-image-cropper",
+    "name": "ngx-image-zoom-cropper",
     "version": "6.1.0",
     "description": "An image cropper for Angular",
     "author": "Martijn Willekens",
